src/objects/Shift_Master__c.object
<CustomObject>
    <description>For Utilization Purpose</description>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00:00</fullName>
                </value>
                <value>
                    <fullName>00:30:00</fullName>
                </value>
                <value>
                    <fullName>01:00:00</fullName>
                </value>
                <value>
                    <fullName>01:30:00</fullName>
                </value>
                <value>
                    <fullName>02:00:00</fullName>
                </value>
                <value>
                    <fullName>02:30:00</fullName>
                </value>
                <value>
                    <fullName>03:00:00</fullName>
                </value>
                <value>
                    <fullName>03:30:00</fullName>
                </value>
                <value>
                    <fullName>04:00:00</fullName>
                </value>
                <value>
                    <fullName>04:30:00</fullName>
                </value>
                <value>
                    <fullName>05:00:00</fullName>
                </value>
                <value>
                    <fullName>05:30:00</fullName>
                </value>
                <value>
                    <fullName>06:00:00</fullName>
                </value>
                <value>
                    <fullName>06:30:00</fullName>
                </value>
                <value>
                    <fullName>07:00:00</fullName>
                </value>
                <value>
                    <fullName>07:30:00</fullName>
                </value>
                <value>
                    <fullName>08:00:00</fullName>
                </value>
                <value>
                    <fullName>08:30:00</fullName>
                </value>
                <value>
                    <fullName>09:00:00</fullName>
                </value>
                <value>
                    <fullName>09:30:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Shift External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00:00</fullName>
                </value>
                <value>
                    <fullName>00:30:00</fullName>
                </value>
                <value>
                    <fullName>01:00:00</fullName>
                </value>
                <value>
                    <fullName>01:30:00</fullName>
                </value>
                <value>
                    <fullName>02:00:00</fullName>
                </value>
                <value>
                    <fullName>02:30:00</fullName>
                </value>
                <value>
                    <fullName>03:00:00</fullName>
                </value>
                <value>
                    <fullName>03:30:00</fullName>
                </value>
                <value>
                    <fullName>04:00:00</fullName>
                </value>
                <value>
                    <fullName>04:30:00</fullName>
                </value>
                <value>
                    <fullName>05:00:00</fullName>
                </value>
                <value>
                    <fullName>05:30:00</fullName>
                </value>
                <value>
                    <fullName>06:00:00</fullName>
                </value>
                <value>
                    <fullName>06:30:00</fullName>
                </value>
                <value>
                    <fullName>07:00:00</fullName>
                </value>
                <value>
                    <fullName>07:30:00</fullName>
                </value>
                <value>
                    <fullName>08:00:00</fullName>
                </value>
                <value>
                    <fullName>08:30:00</fullName>
                </value>
                <value>
                    <fullName>09:00:00</fullName>
                </value>
                <value>
                    <fullName>09:30:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shift Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shift__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Shift-{0}</displayFormat>
        <label>Shift Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>